fixed spacing on message form

--- a/app/assets/stylesheets/main/_forms.css.scss
+++ b/app/assets/stylesheets/main/_forms.css.scss
@@ -192,10 +192,10 @@ input:-webkit-autofill {
 // message form -----------
 #form-wrapper{
   background:#eee;
-  height:30vh;
+  height:40vh;
   textarea{
     background-color:#fff;
-    height:10vh;
+    height:100px;
     margin:10px;
     margin-bottom:0;
     width:calc(100% - 20px);
