--- a/app/assets/stylesheets/main/_frontpage.css.scss
+++ b/app/assets/stylesheets/main/_frontpage.css.scss
@@ -392,7 +392,7 @@ ul.edit-site-list {
 
 .app-view {
 	width:100vw !important;
-	height: calc(100vh - 250px) !important;
+	height: calc(100vh - 300px) !important;
 	padding: 40px 20px 20px !important;
 	box-sizing:border-box;
 	font-size: 15px;
@@ -425,7 +425,7 @@ ul.edit-site-list {
 }
 @media (min-width: 750px) {
 	.app-view {
-		height: 70% !important;
+		height: calc(100vh - 240px) !important;
 		width:auto !important;
 		.them-msg-wrapper {
 			.them-meta-data{
